# plex_live_search

./: .gitignore  Cargo.toml  Dockerfile  README.md
script/: build  run
src/: config.rs  lib.rs  main.rs  parser.rs  plex.rs  search_result.rs
