[package]
name = "plex_live_search"
version = "0.1.0"
authors = ["Max Wagner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
xml-rs = "0.8.3"
chrono = "0.4.11"
clap = "2.33.1"
structopt = "0.3.13"
